--- a/style.css
+++ b/style.css
@@ -201,4 +201,198 @@
     color: black;
   }
   
+
+  @media screen and (max-width:480px) {
+    div img {
+    width: 7em;
+    height: auto;
+    margin-left: -13px;
+  }
   
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    width: 30rem;
+    background-color: #a16d4aea;
+  }
+  
+  header ul {
+    display: flex;
+    font-size: 0.9em;
+  }
+  
+  header ul li {
+    margin-left: 30px;
+  }
+  
+  header ul li a {
+    text-decoration: none;
+    color: #c7c0ba;
+  }
+  
+  header ul li a:hover {
+    transition: 0.9s;
+    color: #ecaa70ef;
+  }
+
+  .div-button {
+    display: flex;
+    justify-content: center;
+  }
+
+} 
+/*   
+  #myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 12px;
+  }
+  
+  #myBtn:hover {
+    background: #ddd;
+    color: black;
+    transition: 0.9s;
+  }
+  
+  .sessao1 {
+    display: flex;
+    padding: 10vh;
+    background-color: #dcb69d;
+    color: black;
+  }
+  
+  .sessao1 div p {
+    text-align: left;
+    margin: 0.5rem;
+    font-weight: 600;
+  }
+  
+  #div-pai {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-top: -180px;
+  }
+  
+  .blocos {
+    width: 12rem;
+    height: 13rem;
+    border: 3px solid black;
+    border-radius: 10px;
+    font-size: 4rem;
+    box-shadow: 15px 15px 15px black;
+  }
+  
+  #b1 img{
+   margin-left: 0px;
+   width: 101%;
+   height: 100%;
+   border-radius: 10px;
+  }
+  
+  #b2 img{
+    margin-left: 0px;
+    width: 101%;
+    height: 100%;
+    border-radius: 10px;
+  }
+  
+  #b3 img{
+    margin-left: 0px;
+   width: 101%;
+   height: 100%;
+   border-radius: 10px;
+  }
+  
+  section {
+    display: flex;
+    padding: 2vw;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+    background-color: #b18f74;
+  }
+  
+  #divForm {
+    padding: 4vw;
+    background-color: #5a3924e1;
+    color: #a8876d;
+    border: 1px solid black;
+    border-radius: 60px;
+    box-shadow: 10px 10px 10px black;
+  }
+  
+  #divForm h2 {
+    font-size: 1.5em;
+    text-align: center;
+    margin-top: -15px;
+    margin-bottom: 30px;
+  }
+  
+  #divForm input {
+    border-radius: 9px;
+  }
+  
+  .enviar {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
+  
+  .enviar input {
+    width: 10vw;
+    height: 4vh;
+  }
+  
+  #comentario {
+    width: 23vw;
+    height: 20vh;
+    border-radius: 10px;
+  }
+  
+  #divMap iframe {
+    border-radius: 30px;
+    box-shadow: 5px 5px 10px black;
+    height: 68vh;
+    margin-top: 25px;
+  }
+  
+  footer {
+    text-align: center;
+    background-color: #a16d4a;
+    height: 45vh;
+  }
+  
+  #divFpai {
+    display: flex;
+    padding: 2vw;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  #divFpai div {
+    width: 30vw;
+  }
+  
+  #divFpai div span {
+    font-weight: 900;
+  }
+  
+  #divFpai a {
+    text-decoration: none;
+    color: black;
+  }
+  }
+   */
